app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-web-app
  labels:
    app.kubernetes.io/name: flask-web-app
spec:
  containers:
  - name: flask-web-app
    image: timonovid/flask-app:latest
    ports:
    - containerPort: 11130
