app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - app.janbo.com
  rules:
  - host: app.janbo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-web-service
            port:
              number: 80
